<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="itemHeaderEntity"
            type="com.jydev.jobplanetandroid.models.entity.search.ItemHeaderEntity" />
        <variable
            name="reviewCellTypeEntity"
            type="com.jydev.jobplanetandroid.models.entity.search.ReviewCellTypeEntity" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@color/white">

    <include
        android:id="@+id/itemHeader"
        app:itemHeaderEntity="@{itemHeaderEntity}"
        layout="@layout/item_search_result_header"/>


    <TextView
        android:id="@+id/prosText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pros"
        android:textSize="20sp"
        android:textColor="@color/color_0067A3"
        app:layout_constraintTop_toBottomOf="@id/itemHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/prosTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@{reviewCellTypeEntity.pros}"
        android:textColor="@color/black"
        tools:text="반도체 관련 산업 전망에 대해 이해할 수 있으며 이름도 알려져 있어 커리어 관리하기에는 좋음."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/prosText"
        app:layout_constraintStart_toEndOf="@id/prosText"/>

    <TextView
        android:id="@+id/consText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cons"
        android:textSize="20sp"
        android:textColor="@color/color_FF0000"
        app:layout_constraintTop_toBottomOf="@id/prosTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/consTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@{reviewCellTypeEntity.cons}"
        android:textColor="@color/black"
        tools:text="반도체 관련 산업 전망에 대해 이해할 수 있으며 이름도 알려져 있어 커리어 관리하기에는 좋음."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/consText"
        app:layout_constraintStart_toEndOf="@id/consText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_more_company_review"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/consTextView"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>